# Deep-Relocalization

./: README.md  env.sh  launch_cluster.sh
deep-relocalization/: CMakeLists.txt  package.xml
deep-relocalization/app/: build-index.cc  time-query.cc
deep-relocalization/data/: fusion_debug.pb  fusion_debug_sigma-8_iter-1000.pb
deep-relocalization/data/loc_debug/: loc_baseline-freak.pb  loc_mobilenet-d0.35-pca128-NN10_freak.pb  loc_mobilenet-d0.35-pca512-NN10_freak-NN1.pb  loc_mobilenet-d0.35-pca512-NN10_freak-NN2.pb  loc_mobilenet-d0.35-pca512-NN10_freak-NN3.pb
deep-relocalization/include/deep-relocalization/: kd-tree-index.h  pca-reduction.h  place-retrieval.h  tensorflow-net.h
deep-relocalization/model/resnet50_delf_vlad_triplets_margin-02_proj-40_sq/: saved_model.pb
deep-relocalization/model/resnet50_delf_vlad_triplets_margin-02_proj-40_sq/variables/: variables.index
deep-relocalization/models/resnet50_delf_global-max-pool/: saved_model.pb
deep-relocalization/models/resnet50_delf_global-max-pool/variables/: variables.index
deep-relocalization/models/resnet50_delf_vlad_triplets_margin-03_sq-in/: saved_model.pb
deep-relocalization/models/resnet50_delf_vlad_triplets_margin-03_sq-in/variables/: variables.index
deep-relocalization/proto/deep-relocalization/: descriptor_index.proto
deep-relocalization/src/: place-retrieval.cc
deep-relocalization/test/: test_build_index.cc  test_inference.cc  test_opencv.cc  test_protobuf.cc  test_query_index.cc  test_time_query.cc
global-loc/: maps
global-loc/app/: build-index.cc  time-query.cc
global-loc/test/: test_build_index.cc  test_inference.cc
notebooks/: export_match_visualization.ipynb  generate_debug_proto_py.sh  generate_proto_py.sh  nclt_evaluation.ipynb  nclt_evaluation_legacy.ipynb  offline_demo_tango.ipynb  tango_evaluation.ipynb  tango_evaluation_6dof.ipynb  tango_loc_map.ipynb  tango_video.ipynb  tango_visualize.ipynb  tango_visualize_matches.ipynb  utils.py
retrievalnet/: experiment.py  export_descriptors.py  requirements.txt  settings.py
retrievalnet/configs/: resnet_attention.yaml  resnet_pooling.yaml  triplet_training.yaml
retrievalnet/datasets/: mnist.py  nclt.py
retrievalnet/models/: base_model.py  delf.py  delf_triplets.py  (+2 more)
utils/: launch_cluster.sh
(+22 files in other folders)
