<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>deep_relocalization</name>
  <version>0.0.0</version>
  <description>The deep_relocalization package</description>
  <maintainer email="fdebrain@student.ethz.ch">Frederic Debraine</maintainer>
  <maintainer email="psarlin@student.ethz.ch">Paul-Edouard Sarlin</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>opencv3_catkin</depend>
  <depend>tensorflow_catkin</depend>
  <depend>protobuf_catkin</depend>
</package>
